--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,18 @@
   color: #fff;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  background-color: #032541;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
 .container {
   width: 50rem;
   margin-left: auto;
@@ -74,4 +86,77 @@ button:hover {
 .search-results li {
   margin-left: 1rem;
   margin-top: 1rem;
+}
+
+.movie-grid {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 1.5rem;
+}
+
+.movie-card {
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  text-align: left;
+  width: 15rem;
+  flex: 0 0 auto;
+}
+
+.selected-movie {
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.selected-movie-image-details {
+  display: flex;
+  gap: 2rem;
+}
+
+.selected-movie img {
+  max-width: 40%;
+  height: auto;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+}
+
+.selected-movie h2, p {
+  margin-top: 1rem;
+  text-align: left;
+}
+
+.movie-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.5rem;
+}
+
+.movie-container {
+  margin-top: 1rem;
+  width: 48rem;
+  overflow-x: auto;
+}
+
+.movie-card h3 {
+  margin-top: 1rem;
+  font-size: 18px;
+}
+
+.movie-card p {
+  margin-top: 1rem;
+  font-size: 14px;
+}
+
+.overview {
+  width: 100%;
+  line-height: 1.2em;
+  height: 3.6em;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
